<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="status_default">Play tic-tac-toe with another device on your WiFi</string>
    <string name="label_or">or</string>
    <string name="hint_address">Host address, e.g. 192.168.1.12:7060</string>
    <string name="hint_token">4-digit token</string>
    <string name="action_host">Host a game</string>
    <string name="action_join">Join game</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_new_game">New game</string>
    <string name="action_leave">Leave game</string>
</resources>
